# LogPurifier

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build.yml
data/BGL/: README.md
data/HDFS/: README.md
data/Spirit/: README.md
data/Thunderbird/: README.md
k8s/: README.md  namespace.yaml
k8s/jobs/bgl/: bgl-iforest-w100.yaml  bgl-iforest-w120.yaml  bgl-iforest-w1800.yaml  bgl-iforest-w300.yaml  bgl-iforest-w3600.yaml  bgl-iforest-w60.yaml  bgl-iforest-w600.yaml  bgl-im-w100.yaml  bgl-im-w120.yaml  bgl-im-w1800.yaml  bgl-im-w300.yaml  bgl-im-w3600.yaml  bgl-im-w60.yaml  bgl-im-w600.yaml  bgl-logcluster-w100.yaml  bgl-logcluster-w120.yaml  bgl-logcluster-w1800.yaml  bgl-logcluster-w300.yaml  bgl-logcluster-w3600.yaml  bgl-logcluster-w60.yaml  bgl-logcluster-w600.yaml  bgl-ocsvm-w100.yaml  bgl-ocsvm-w120.yaml  bgl-ocsvm-w1800.yaml  bgl-ocsvm-w300.yaml  bgl-ocsvm-w3600.yaml  bgl-ocsvm-w60.yaml  bgl-ocsvm-w600.yaml  bgl-pca-w100.yaml  bgl-pca-w120.yaml  bgl-pca-w1800.yaml  bgl-pca-w60.yaml  (+3 more)
scripts/: generate_k8s_jobs.py  run_ad.py
specs/: 00-overview.md  01-dependency-score.md  02-clustering.md  03-ad-pipeline.md  04-datasets.md  05-persistence.md  06-containerization.md
src/logpurifier/: __init__.py  ad_eval.py  clustering.py  datasets.py  dependency.py  logging_config.py  models.py  parsing.py  pipeline.py  purifier.py  windowing.py
tests/: test_clustering.py  test_datasets.py  test_dependency.py  test_end_to_end_bgl.py  test_models.py  test_pipeline_cache.py  test_purifier.py  test_windowing.py
(+75 files in other folders)
