[project]
name = "logpurifier"
version = "0.1.0"
description = "Reproduction of LogPurifier (Cleaning Logs for Downstream Tasks, arXiv:2606.27000v1) — anomaly detection task"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
dependencies = [
    "drain3==0.9.11",
    "numpy>=1.26,<2.0",
    "scipy>=1.11",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "pyarrow>=24.0.0",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# project: src/logpurifier，vendored loglizer: third_party/loglizer
[tool.hatch.build.targets.wheel]
packages = ["src/logpurifier", "third_party/loglizer"]

[tool.pytest.ini_options]
pythonpath = ["src", "third_party"]
testpaths = ["tests"]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
